# clang-miniprojects

data-structures/if-lookup/: iflib.c  iflib.h  main.c
data-structures/stack/: stack.c  stack.h
data-structures/stack-with-oop/: README.md  stack.c  stack.h
network/gatebreaker/: README.md  makeit.sh
network/gatebreaker/include/iflookup/: iflookup.h
network/gatebreaker/include/netlib/: arp.h  frame.h  packet.h  transfer.h
network/gatebreaker/include/prettyterm/: logo.h
network/gatebreaker/src/: CMakeLists.txt  main.c
network/gatebreaker/src/iflookup/: CMakeLists.txt  iflookup.c
network/gatebreaker/src/netlib/: CMakeLists.txt  arp.c  frame.c  packet.c  transfer.c
network/gatebreaker/src/prettyterm/: CMakeLists.txt  logo.c
network/iflookup/: .gitignore  README.md  iflookup  makeit.sh
network/iflookup/include/iflookup/: iflookup.h
network/iflookup/src/: CMakeLists.txt  iflookup.c  main.c
network/iflookup/src/iflookup/: CMakeLists.txt  iflookup.c
